@@ -24,7 +24,5 @@ RDEPEND="
 "
 
 python_test() {
-	for x in "${S}"/tests/*.py; do
-		${PYTHON} ${x} || die "Test ${x} failed"
-	done
+	${PYTHON} setup.py test || die "Test ${x} failed"
 }
